# serverless-federated-graphql

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  justfile  router.yaml  supergraph.graphql
.github/workflows/: build-and-release.yml  build-directly.yml  build-server.yml  build.yml  release.yml
lambda-cosmo/: Cargo.toml  cosmo.yaml
lambda-cosmo-custom/: .env.example  README.md  cosmo.yaml  go.mod  go.sum  main.go  supergraph.json
lambda-cosmo-custom/cmd/: main.go
lambda-cosmo-custom/module/: module.go
lambda-cosmo/src/: main.rs
lambda-directly/: .dockerignore  Cargo.toml  Dockerfile
lambda-directly-optimized/: .dockerignore  Cargo.toml  Dockerfile-arm  Dockerfile-arm-graviton  Dockerfile-arm-graviton-size  Dockerfile-arm-graviton-size-al2023  Dockerfile-arm-graviton-speed  Dockerfile-x86  Dockerfile-x86-al2023
lambda-directly-optimized/.cargo/: config.toml
lambda-directly-optimized/src/: main.rs
lambda-directly/src/: main.rs
lambda-with-server/: Cargo.toml  Dockerfile
lambda-with-server/src/: main.rs
src/: main.rs
