[package]
name = "apollo-router-lambda"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Configurations explicitly listed here for clarity, using the best options for performance.
# - https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
# - https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization.
strip = true      # Automatically strip symbols from the binary.
debug = false

# Use the `--profile release-speed` flag to optimize for speed in release mode. E.g.
# `cargo build --profile release-speed`.
[profile.release-speed]
inherits = "release"
# Optimize for speed.
opt-level = 3

# Use the `--profile release-size` flag to optimize for size in release mode. E.g.
# `cargo build --profile release-size`.
[profile.release-size]
inherits = "release"
# Optimize for size.
opt-level = "z"
panic = "abort"

[dependencies]
# The Apollo Router.
apollo-router = "1.33.1"
tower = "0.4.13"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls",
  "json",
] }

# Necessary to handle shell expands for the override_subgraph_url plugin.
shellexpand = "3.1.0"

# Using AWS services.
tokio = { version = "1.33.0", features = ["macros", "process"] }
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"

# Utilities.
serde_json = "1"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
